[gd_scene load_steps=5 format=3 uid="uid://gitfjd8tyljt"]

[ext_resource type="Theme" uid="uid://dc5mof4oa3hlk" path="res://main_theme_for_hud_stuff.tres" id="1_jub0w"]
[ext_resource type="Script" uid="uid://bxa2vsilmdwn" path="res://menus/main_menu.gd" id="1_kxgti"]
[ext_resource type="AudioStream" uid="uid://8ekyoqi7wgvx" path="res://assets/sounds/change_weapon_robot_master.ogg" id="3_ge76d"]
[ext_resource type="AudioStream" uid="uid://cs2hbndrxu528" path="res://assets/sounds/weapon_and_menu_select.ogg" id="4_frbev"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_kxgti")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -11.0
offset_top = -4.0
offset_right = 774.0
offset_bottom = 727.0
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 274.0
offset_top = 187.0
offset_right = 482.0
offset_bottom = 480.0
alignment = 1

[node name="start_game" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../title_screen")
theme = ExtResource("1_jub0w")
text = "START GAME"

[node name="title_screen" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../start_game")
focus_neighbor_bottom = NodePath("../options")
theme = ExtResource("1_jub0w")
text = "TITLE SCREEN"

[node name="options" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../title_screen")
focus_neighbor_bottom = NodePath("../credits")
theme = ExtResource("1_jub0w")
text = "OPTIONS"

[node name="credits" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../options")
focus_neighbor_bottom = NodePath("../quit")
theme = ExtResource("1_jub0w")
text = "CREDITS"

[node name="quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../options")
theme = ExtResource("1_jub0w")
text = "QUIT"

[node name="switch_menu_timer" type="Timer" parent="."]
one_shot = true

[node name="hoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ge76d")
volume_db = -5.0

[node name="enterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_frbev")

[connection signal="mouse_entered" from="Control/VBoxContainer/start_game" to="." method="_on_start_game_mouse_entered"]
[connection signal="pressed" from="Control/VBoxContainer/start_game" to="." method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="Control/VBoxContainer/title_screen" to="." method="_on_title_screen_mouse_entered"]
[connection signal="pressed" from="Control/VBoxContainer/title_screen" to="." method="_on_title_screen_pressed"]
[connection signal="mouse_entered" from="Control/VBoxContainer/options" to="." method="_on_options_mouse_entered"]
[connection signal="mouse_entered" from="Control/VBoxContainer/credits" to="." method="_on_credits_mouse_entered"]
[connection signal="pressed" from="Control/VBoxContainer/credits" to="." method="start_switch_timer"]
[connection signal="pressed" from="Control/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="Control/VBoxContainer/quit" to="." method="_on_credits_mouse_entered"]
[connection signal="pressed" from="Control/VBoxContainer/quit" to="." method="start_switch_timer"]
[connection signal="pressed" from="Control/VBoxContainer/quit" to="." method="_on_quit_pressed"]
